// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShortcutsHelp > renders correctly in 'narrow' mode on 'linux' 1`] = `
"────────────────────────────────────────
 Shortcuts See /help for more
 ! shell mode
 @ select file or folder
 Double Esc clear & rewind
 Tab focus UI
 Ctrl+Y YOLO mode
 Shift+Tab cycle mode
 Ctrl+V paste images
 Alt+M raw markdown mode
 Ctrl+R reverse-search history
 Ctrl+G open external editor
"
`;

exports[`ShortcutsHelp > renders correctly in 'narrow' mode on 'mac' 1`] = `
"────────────────────────────────────────
 Shortcuts See /help for more
 ! shell mode
 @ select file or folder
 Double Esc clear & rewind
 Tab focus UI
 Ctrl+Y YOLO mode
 Shift+Tab cycle mode
 Ctrl+V paste images
 Option+M raw markdown mode
 Ctrl+R reverse-search history
 Ctrl+G open external editor
"
`;

exports[`ShortcutsHelp > renders correctly in 'wide' mode on 'linux' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 Shortcuts See /help for more
 ! shell mode                    Shift+Tab cycle mode            Ctrl+V paste images
 @ select file or folder         Ctrl+Y YOLO mode                Alt+M raw markdown mode
 Double Esc clear & rewind       Ctrl+R reverse-search history   Ctrl+G open external editor
 Tab focus UI
"
`;

exports[`ShortcutsHelp > renders correctly in 'wide' mode on 'mac' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 Shortcuts See /help for more
 ! shell mode                    Shift+Tab cycle mode            Ctrl+V paste images
 @ select file or folder         Ctrl+Y YOLO mode                Option+M raw markdown mode
 Double Esc clear & rewind       Ctrl+R reverse-search history   Ctrl+G open external editor
 Tab focus UI
"
`;
